--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
+    "cloudinary": "^2.6.1",
+    "cloudinary-react": "^1.8.1",
     "firebase": "^11.9.1",
     "idb": "^8.0.3",
     "react": "^19.1.0",
