--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,8 +17,6 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "axios": "^1.10.0",
-    "cloudinary": "^2.6.1",
-    "cloudinary-react": "^1.8.1",
     "firebase": "^11.9.1",
     "idb": "^8.0.3",
     "react": "^19.1.0",
